fix(player): fix issue where close caps settings elements overlap on LG devices

--- a/src/css/components/_captions-settings.scss
+++ b/src/css/components/_captions-settings.scss
@@ -15,15 +15,20 @@
   display: table;
 }
 
-.vjs-text-track-settings .vjs-track-settings-colors,
-.vjs-text-track-settings .vjs-track-settings-font,
-.vjs-text-track-settings .vjs-track-settings-controls {
-  display: table-cell;
-}
-
 .vjs-text-track-settings .vjs-track-settings-controls {
   text-align: right;
   vertical-align: bottom;
+}
+
+// In case grid is not supported use the flexbox
+.vjs-text-track-settings .vjs-modal-dialog-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+// Width only used when grid is not supported
+.vjs-text-track-settings .vjs-track-settings-controls {
+  width: 100%;
 }
 
 // code that will only run if CSS Grid is supported by the browser
@@ -36,6 +41,7 @@
     // so we add bottom padding/margin to the last item in the grid instead of here
     // see https://stackoverflow.com/a/23754080
     padding: 20px 24px 0px 24px;
+    flex-wrap: unset;
   }
 
   // see the comment for padding above
@@ -46,6 +52,7 @@
   .vjs-text-track-settings .vjs-track-settings-controls {
     // make this take up both columns
     grid-column: 1 / -1;
+    width: unset;
   }
 
   // 1 column for small players
@@ -55,6 +62,11 @@
     grid-template-columns: 1fr;
   }
 
+  .vjs-text-track-settings .vjs-track-settings-colors,
+  .vjs-text-track-settings .vjs-track-settings-font,
+  .vjs-text-track-settings .vjs-track-settings-controls {
+    display: table-cell;
+  }
 }
 
 // Form elements
@@ -68,6 +80,7 @@
 }
 
 .vjs-text-track-settings fieldset {
+  max-width: 16.6em;
   margin: 10px;
   border: none;
 }
